Preliminary version of Telefonica SRIOV-OpenFlow ML2 mechanism

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = neutron
-version = 2014.2.4
+version = 2014.2.3
 summary = OpenStack Networking
 description-file =
     README.rst
@@ -127,8 +127,6 @@ console_scripts =
     neutron-ofagent-agent = neutron.plugins.ofagent.agent.main:main
     neutron-sriov-nic-agent = neutron.plugins.sriovnicagent.sriov_nic_agent:main
     neutron-sanity-check = neutron.cmd.sanity_check:main
-    neutron-cisco-apic-service-agent = neutron.plugins.ml2.drivers.cisco.apic.apic_topology:service_main
-    neutron-cisco-apic-host-agent = neutron.plugins.ml2.drivers.cisco.apic.apic_topology:agent_main
 neutron.core_plugins =
     bigswitch = neutron.plugins.bigswitch.plugin:NeutronRestProxyV2
     brocade = neutron.plugins.brocade.NeutronPlugin:BrocadePluginV2
@@ -180,6 +178,7 @@ neutron.ml2.mechanism_drivers =
     fslsdn = neutron.plugins.ml2.drivers.freescale.mechanism_fslsdn:FslsdnMechanismDriver
     sriovnicswitch = neutron.plugins.ml2.drivers.mech_sriov.mech_driver:SriovNicSwitchMechanismDriver
     nuage = neutron.plugins.ml2.drivers.mech_nuage.driver:NuageMechanismDriver
+    telefonica = neutron.plugins.ml2.drivers.telefonica.mech_telefonica:TelefonicaMechanismDriver
 neutron.ml2.extension_drivers =
     test = neutron.tests.unit.ml2.test_extension_driver_api:TestExtensionDriver
 neutron.openstack.common.cache.backends =
