Adding external port declaration using the field device_id.

--- a/neutron/plugins/ml2/drivers/telefonica/tef_test.yaml
+++ b/neutron/plugins/ml2/drivers/telefonica/tef_test.yaml
@@ -17,3 +17,6 @@ switches:
             phys_function_address: '0000:81:00.1'
             mac_address: 92:27:30:49:46:DD
             switch_port: 4
+          - alias: 'Imagenio'
+            switch_port: 5
+
