--- a/neutron/plugins/ml2/drivers/telefonica/tef_test.yaml
+++ b/neutron/plugins/ml2/drivers/telefonica/tef_test.yaml
@@ -1,72 +1,22 @@
 switches:
-  - switch_dpid: 00:24:38:9a:56:00:00:00
+  - switch_dpid: 00:00:00:00:00:00:00:01
     ports:
-          - host_id: 'nfv130.hi.inet'
-            phys_function_address: '0000:41:00.0'
-            mac_address: 00:1b:21:79:5b:bc
-            switch_port: 145
-          - host_id: 'nfv130.hi.inet'
-            phys_function_address: '0000:41:00.1'
-            mac_address: 00:1b:21:79:5b:bd
-            switch_port: 146
-          - host_id: 'nfv130.hi.inet'
-            phys_function_address: '0000:42:00.0'
-            mac_address: a0:36:9f:13:a3:3c
-            switch_port: 147
-          - host_id: 'nfv130.hi.inet'
-            phys_function_address: '0000:42:00.1'
-            mac_address: a0:36:9f:13:a3:3e
-            switch_port: 148
-          - host_id: 'nfv130.hi.inet'
-            phys_function_address: '0000:03:00.0'
-            mac_address: 00:1b:21:74:5d:60
-            switch_port: 149
-          - host_id: 'nfv130.hi.inet'
-            phys_function_address: '0000:03:00.1'
-            mac_address: 00:1b:21:74:5d:61
-            switch_port: 150
-          - host_id: 'nfv130.hi.inet'
-            phys_function_address: '0000:04:00.0'
-            mac_address: a0:36:9f:13:a8:bc
-            switch_port: 151
-          - host_id: 'nfv130.hi.inet'
-            phys_function_address: '0000:04:00.1'
-            mac_address: a0:36:9f:13:a8:be
-            switch_port: 152
-          - host_id: 'nfv131.hi.inet'
-            phys_function_address: '0000:44:00.0'
-            mac_address: 90:e2:ba:08:d6:b4
-            switch_port: 153
-          - host_id: 'nfv131.hi.inet'
-            phys_function_address: '0000:44:00.1'
-            mac_address: 90:e2:ba:08:d6:b5
-            switch_port: 154
-          - host_id: 'nfv131.hi.inet'
-            phys_function_address: '0000:43:00.0'
-            mac_address: 90:e2:ba:13:13:00
-            switch_port: 155
-          - host_id: 'nfv131.hi.inet'
-            phys_function_address: '0000:43:00.1'
-            mac_address: 90:e2:ba:13:13:01
-            switch_port: 156
-          - host_id: 'nfv131.hi.inet'
-            phys_function_address: '0000:04:00.0'
-            mac_address: 90:e2:ba:13:14:e8 
-            switch_port: 157
-          - host_id: 'nfv131.hi.inet'
-            phys_function_address: '0000:04:00.1'
-            mac_address: 90:e2:ba:13:14:e9
-            switch_port: 158
-          - host_id: 'nfv131.hi.inet'
-            phys_function_address: '0000:05:00.0'
-            mac_address: 00:1b:21:79:5c:a8
-            switch_port: 159
-          - host_id: 'nfv131.hi.inet'
-            phys_function_address: '0000:05:00.1'
-            mac_address: 00:1b:21:79:5c:a9
-            switch_port: 160
+          - host_id: 1
+            phys_function_address: '0000:02:00.0'
+            mac_address: 92:27:30:49:46:DB
+            switch_port: 1
+          - host_id: 1
+            phys_function_address: '0000:02:00.1'
+            mac_address: 92:27:30:49:46:DA
+            switch_port: 2
+          - host_id: 1
+            phys_function_address: '0000:81:00.0'
+            mac_address: 92:27:30:49:46:DC
+            switch_port: 3
+          - host_id: 1
+            phys_function_address: '0000:81:00.1'
+            mac_address: 92:27:30:49:46:DD
+            switch_port: 4
           - alias: 'Imagenio'
-            switch_port: 161               
-          - alias: 'P2P'
-            switch_port: 162
+            switch_port: 5
 
